RESOLVED FIXED114540
[Windows, WinCairo] ImageBufferCairo.cpp fails to compile after 148247, 148264.
https://bugs.webkit.org/show_bug.cgi?id=114540
Summary [Windows, WinCairo] ImageBufferCairo.cpp fails to compile after 148247, 148264.
Mark Salisbury
Reported 2013-04-12 15:49:44 PDT
Created attachment 197897 [details] Proposed fix Changes were introduced in ImageBufferCairo.cpp that assume that USE(ACCELERATED_COMPOSITING) is enabled. The windows cairo build does not have accelerated compositing enabled. See proposed fix.
Attachments
Proposed fix (1.15 KB, patch)
2013-04-12 15:49 PDT, Mark Salisbury
no flags
Proposed fix (1.15 KB, patch)
2013-04-12 16:01 PDT, Mark Salisbury
no flags
Proposed fix (1.22 KB, patch)
2013-04-12 16:55 PDT, Mark Salisbury
bfulgham: review+
bfulgham: commit-queue-
Proposed fix (1.21 KB, patch)
2013-04-12 20:00 PDT, Mark Salisbury
no flags
Proposed fix (1.21 KB, patch)
2013-04-12 20:24 PDT, Mark Salisbury
bfulgham: review+
commit-queue: commit-queue-
Proposed fix (1.22 KB, patch)
2013-04-13 08:11 PDT, Mark Salisbury
no flags
Mark Salisbury
Comment 1 2013-04-12 16:01:41 PDT
Created attachment 197901 [details] Proposed fix oops... I didn't put the correct bug URL in my change log. This puts the correct bug ID in.
Mark Salisbury
Comment 2 2013-04-12 16:55:22 PDT
Created attachment 197909 [details] Proposed fix This patch adds the file path changed to the change log. You could guess I didn't run the script to auto-generate the change log.
WebKit Commit Bot
Comment 3 2013-04-12 16:57:55 PDT
Attachment 197909 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/cairo/ImageBufferCairo.cpp']" exit_code: 1 Source/WebCore/ChangeLog:8: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 4 2013-04-12 19:15:34 PDT
Comment on attachment 197909 [details] Proposed fix Looks good, but please fix the style issue!
Mark Salisbury
Comment 5 2013-04-12 20:00:34 PDT
Created attachment 197917 [details] Proposed fix
Mark Salisbury
Comment 6 2013-04-12 20:24:37 PDT
Created attachment 197918 [details] Proposed fix oops... I tweaked the patch file by hand but didn't update the magic numbers. This should apply now. One of the more difficult 'trivia' fixes I've ever done...
WebKit Commit Bot
Comment 7 2013-04-12 21:51:14 PDT
Comment on attachment 197918 [details] Proposed fix Rejecting attachment 197918 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--non-interactive', 197918, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.appspot.com/results/44122
Mark Salisbury
Comment 8 2013-04-13 08:11:22 PDT
Created attachment 197939 [details] Proposed fix I changed 'Not Reviewed' to 'Reviewed by Brent Fulgham.' stylebots should be appeased now, I hope.
Brent Fulgham
Comment 9 2013-04-13 08:22:27 PDT
Comment on attachment 197939 [details] Proposed fix I should have caught that one! r=me
WebKit Commit Bot
Comment 10 2013-04-13 09:06:33 PDT
Comment on attachment 197939 [details] Proposed fix Clearing flags on attachment: 197939 Committed r148357: <http://trac.webkit.org/changeset/148357>
WebKit Commit Bot
Comment 11 2013-04-13 09:06:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.