[Windows, WinCairo] ImageBufferCairo.cpp fails to compile after 148247, 148264. https://bugs.webkit.org/show_bug.cgi?id=114540

Patch by Mark Salisbury <mark.salisbury@hp.com> on 2013-04-13
Reviewed by Brent Fulgham.

* platform/graphics/cairo/ImageBufferCairo.cpp:

Canonical link: https://commits.webkit.org/132941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148357 268f45cc-cd09-0410-ab3c-d52691b4dbfc