Source/WebCore/platform/graphics/cairo/ImageBufferCairo.cpp
@@ -410,6 +410,7 @@ void ImageBufferData::paintToTextureMapper(TextureMapper* textureMapper, const F
 }
 #endif
 
+#if USE(ACCELERATED_COMPOSITING)
 PlatformLayer* ImageBuffer::platformLayer() const
 {
 #if ENABLE(ACCELERATED_2D_CANVAS)
@@ -418,5 +419,6 @@ PlatformLayer* ImageBuffer::platformLayer() const
 #endif
     return 0;
 }
+#endif
 
 } // namespace WebCore
